<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imgbacklogin"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/loginsigaa"
        app:srcCompat="@drawable/sigaa" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="222dp"
        android:text="@string/login_title"
        android:textColor="#264531"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="325dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="263dp"
        android:ems="10"
        android:paddingStart="10dp"
        android:paddingEnd="100dp"
        android:background="@drawable/edittext_bottom_line"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="#616161"
        android:textSize="22sp" />


    <EditText
        android:id="@+id/senha"
        android:layout_width="325dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="189dp"
        android:background="@drawable/edittext_bottom_line"
        android:ems="10"
        android:paddingStart="10dp"
        android:paddingEnd="100dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#616161"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="93dp"
        android:background="@drawable/rounded_white"
        android:backgroundTint="#2e7d32"
        android:text="@string/enterbutton"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/forgot"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#264531"/>
</RelativeLayout>